[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/MainMenuScene.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/dynamic_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/Avenixel-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/dynamic_font_small.tres" type="DynamicFont" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float perc : hint_range(0,1);

void fragment() {
	
	COLOR.a = smoothstep(0,1,UV.x*perc+perc);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/perc = 0.0

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -14
font_data = ExtResource( 4 )

[node name="MainMenuScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Clock" parent="." instance=ExtResource( 2 )]
position = Vector2( 104.66, 119.448 )
scale = Vector2( 3, 3 )

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 208.0
margin_bottom = 369.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuLayer" type="Control" parent="."]
margin_right = 207.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenuLayer"]
margin_left = 13.7615
margin_top = 154.11
margin_right = 192.761
margin_bottom = 336.11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MainMenuLayer/CenterContainer"]
margin_left = 19.0
margin_right = 159.0
margin_bottom = 182.0
custom_constants/vseparation = 10

[node name="btnLearn" type="Button" parent="MainMenuLayer/CenterContainer/GridContainer"]
margin_right = 140.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Learn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStart" type="Button" parent="MainMenuLayer/CenterContainer/GridContainer"]
margin_top = 48.0
margin_right = 140.0
margin_bottom = 86.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStats" type="Button" parent="MainMenuLayer/CenterContainer/GridContainer"]
margin_top = 96.0
margin_right = 140.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnAbout" type="Button" parent="MainMenuLayer/CenterContainer/GridContainer"]
margin_top = 144.0
margin_right = 140.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 3 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="MainMenuLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_right = 63.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 3 )
text = "Guess
the
Time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutPopup" type="PopupPanel" parent="MainMenuLayer"]
margin_left = -1.0
margin_top = 109.0
margin_right = 205.0
margin_bottom = 323.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenuLayer/AboutPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 202.0
margin_bottom = 223.0

[node name="GridContainer" type="GridContainer" parent="MainMenuLayer/AboutPopup/CenterContainer"]
margin_left = 19.0
margin_right = 179.0
margin_bottom = 219.0
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenuLayer/AboutPopup/CenterContainer/GridContainer"]
margin_right = 160.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.784314, 0.760784, 0.168627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rudy Vicario
2021"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MainMenuLayer/AboutPopup/CenterContainer/GridContainer"]
margin_top = 77.0
margin_right = 160.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.784314, 0.760784, 0.168627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Follow me on:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnTwitter" type="LinkButton" parent="MainMenuLayer/AboutPopup/CenterContainer/GridContainer"]
margin_top = 103.0
margin_right = 160.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 5 )
text = "Twitter (rudyvic95)"

[node name="btnWebsite" type="LinkButton" parent="MainMenuLayer/AboutPopup/CenterContainer/GridContainer"]
margin_top = 129.0
margin_right = 160.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 5 )
text = "Website"

[node name="btnItchio" type="LinkButton" parent="MainMenuLayer/AboutPopup/CenterContainer/GridContainer"]
margin_top = 155.0
margin_right = 160.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 5 )
text = "Itch.io (rudyvic)"

[node name="btnBack" type="Button" parent="MainMenuLayer/AboutPopup/CenterContainer/GridContainer"]
margin_top = 181.0
margin_right = 160.0
margin_bottom = 219.0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPopup" type="PopupPanel" parent="MainMenuLayer"]
margin_left = -1.0
margin_top = 109.0
margin_right = 205.0
margin_bottom = 323.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenuLayer/StatsPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 202.0
margin_bottom = 210.0

[node name="GridContainer" type="GridContainer" parent="MainMenuLayer/StatsPopup/CenterContainer"]
margin_left = 20.0
margin_top = 30.0
margin_right = 178.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblHighscore" type="Label" parent="MainMenuLayer/StatsPopup/CenterContainer/GridContainer"]
margin_right = 158.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.784314, 0.760784, 0.168627, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Highscore: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblLastScores" type="Label" parent="MainMenuLayer/StatsPopup/CenterContainer/GridContainer"]
margin_top = 36.0
margin_right = 158.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0666667, 0.572549, 0.87451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Last scores:
0, 0, 0, 0, 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="Button" parent="MainMenuLayer/StatsPopup/CenterContainer/GridContainer"]
margin_top = 107.0
margin_right = 158.0
margin_bottom = 145.0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblVersion" type="Label" parent="."]
margin_left = 3.44839
margin_top = 352.425
margin_right = 43.4484
margin_bottom = 366.425
custom_fonts/font = ExtResource( 5 )
text = "v0.3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuLayer/CenterContainer/GridContainer/btnLearn" to="." method="_on_btnLearn"]
[connection signal="pressed" from="MainMenuLayer/CenterContainer/GridContainer/btnStart" to="." method="_on_btnStart"]
[connection signal="pressed" from="MainMenuLayer/CenterContainer/GridContainer/btnStats" to="." method="_on_btnStats"]
[connection signal="pressed" from="MainMenuLayer/CenterContainer/GridContainer/btnAbout" to="." method="_on_btnAbout"]
[connection signal="button_up" from="MainMenuLayer/AboutPopup/CenterContainer/GridContainer/btnTwitter" to="." method="_on_btnTwitter"]
[connection signal="button_up" from="MainMenuLayer/AboutPopup/CenterContainer/GridContainer/btnWebsite" to="." method="_on_btnWebsite"]
[connection signal="button_up" from="MainMenuLayer/AboutPopup/CenterContainer/GridContainer/btnItchio" to="." method="_on_btnItchio"]
[connection signal="pressed" from="MainMenuLayer/AboutPopup/CenterContainer/GridContainer/btnBack" to="." method="_on_btnAboutBack"]
[connection signal="pressed" from="MainMenuLayer/StatsPopup/CenterContainer/GridContainer/btnBack" to="." method="_on_btnStatsBack"]
